# generative_vae

./: README.md  pyproject.toml
src/: train.py
src/generative_vae/: __init__.py  layers.py  model.py
