[project]
name = "generative-vae"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dylan Dronnier", email = "dylan.dronnier@posteo.net" }
]
dependencies = [
    "jax[cpu]>=0.4.13",
    "flax>=0.7.2",
    "optuna>=3.5.0",
    "datasets[vision]>=2.17.0",
    "matplotlib>=3.7.5",
    "tornado>=6.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "generative_vae:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/generative_vae"]
